Fix ES translation

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22993,8 +22993,8 @@
             {ref__icu, select,
                 on {
                     {ref__gender, select,
-                        female {<![CDATA[Si crees que citizen ha <strong>actuado mal</strong>&amp;#44; denúnciale.<p></p>¡Si varios habitantes hacen lo mismo, él ella recibirá un <strong>castigo</strong> de la comunidad!]]>}
-                        other {<![CDATA[Si crees que citizen ha <strong>actuado mal</strong>&amp;#44; denúnciale.<p></p>¡Si varios habitantes hacen lo mismo, él o recibirá un <strong>castigo</strong> de la comunidad!]]>}
+                        female {<![CDATA[Si crees que {citizen} ha <strong>actuado mal</strong>, denúnciala.<p></p>¡Si varios habitantes hacen lo mismo, ella recibirá un <strong>castigo</strong> de la comunidad!]]>}
+                        other {<![CDATA[Si crees que {citizen} ha <strong>actuado mal</strong>, denúnciale.<p></p>¡Si varios habitantes hacen lo mismo, él recibirá un <strong>castigo</strong> de la comunidad!]]>}
                     }
                 }
                 other {<![CDATA[Si crees que {citizen} ha <strong>actuado mal</strong> denúnciale.<br />¡Si varios habitantes hacen lo mismo, él o (ella) recibirá un <strong>castigo</strong> de la comunidad!]]>}
