--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22648,7 +22648,7 @@
       </notes>
       <segment>
         <source>Ihre Reklamation wurde gut aufgenommen, wird aber in der aktuellen Situation &lt;strong&gt;nicht sehr hilfreich&lt;/strong&gt; sein.&lt;hr&gt;Die Stadt ist im totalen &lt;strong&gt;Chaos&lt;/strong&gt; versunken... Bei so wenigen Überlebenden sind &lt;strong&gt;die Gesetze des Landes gebrochen worden&lt;/strong&gt;.</source>
-        <target><![CDATA[Ihre Reklamation wurde gut aufgenommen, wird aber in der aktuellen Situation <strong>nicht sehr hilfreich</strong> sein.<hr>Die Stadt ist im totalen <strong>Chaos</strong> versunken... Bei so wenigen Überlebenden sind <strong>die Gesetze des Landes gebrochen worden</strong>.]]></target>
+        <target><![CDATA[Tu denuncia fue bien recibida, pero <strong>no será de mucha ayuda</strong> en la situación actual. <hr> La ciudad se ha hundido en un <strong>caos</strong> total... Con tan pocos supervivientes <strong>se han violado las leyes del pueblo</strong>.]]></target>
       </segment>
     </unit>
     <unit id="nbgyiEG">
@@ -22659,7 +22659,7 @@
       </notes>
       <segment>
         <source>Sie haben eine Beschwerde gegen &lt;strong&gt;{citizen}&lt;/strong&gt; eingereicht. Wenn sich genug Beschwerden ansammeln, &lt;strong&gt;wird {citizen} aus der Gemeinschaft verbannt oder gehängt&lt;/strong&gt;, falls ein Galgen vorhanden ist.</source>
-        <target><![CDATA[Sie haben eine Beschwerde gegen <strong>{citizen}</strong> eingereicht. Wenn sich genug Beschwerden ansammeln, <strong>wird {citizen} aus der Gemeinschaft verbannt oder gehängt</strong>, falls ein Galgen vorhanden ist.]]></target>
+        <target><![CDATA[Has presentado una denuncia contra <strong>{citizen}</strong>. Si se acumulan suficientes denuncias, {citizen} <strong>será desterrado de la comunidad o colgado</strong> si hay una horca.]]></target>
       </segment>
     </unit>
     <unit id="CgXv4BN">
@@ -22670,7 +22670,7 @@
       </notes>
       <segment>
         <source>Ihre Beschwerde wurde zurückgezogen... Denken Sie das nächste Mal besser nach...</source>
-        <target>Ihre Beschwerde wurde zurückgezogen... Denken Sie das nächste Mal besser nach...</target>
+        <target>Su queja ha sido retirada... mejor piense la próxima vez...</target>
       </segment>
     </unit>
     <unit id="XG1ubVr">
@@ -22691,7 +22691,7 @@
       </notes>
       <segment>
         <source>Es wurde eine Rauchbombe eingesetzt!</source>
-        <target>Es wurde eine Rauchbombe eingesetzt!</target>
+        <target>¡Se utilizó una bomba de humo!</target>
       </segment>
     </unit>
     <unit id="gDPIj.n" name="Ein neuer Bürger ist in der Stadt angekommen: {citizen} ({profession}).">
@@ -22712,7 +22712,7 @@
       </notes>
       <segment>
         <source>Unser {plan} hat beim Angriff {damage} Punkte Schaden genommen: das sollte dringend repariert werden, ansonsten riskieren wir heute Nacht unser Leben!</source>
-        <target>Unser {plan} hat beim Angriff {damage} Punkte Schaden genommen: das sollte dringend repariert werden, ansonsten riskieren wir heute Nacht unser Leben!</target>
+        <target>Nuestro {plan} sufrió {damage} puntos durante el ataque: ¡debería ser reparado urgentemente, de lo contrario arriesgamos nuestras vidas esta noche!</target>
       </segment>
     </unit>
     <unit id="0VXVYlY">
@@ -22723,7 +22723,7 @@
       </notes>
       <segment>
         <source>Die gesamte Region wurde durch die &lt;strong&gt;Explosion des {plan}&lt;/strong&gt; verstrahlt!</source>
-        <target><![CDATA[Die gesamte Region wurde durch die <strong>Explosion des {plan}</strong> verstrahlt!]]></target>
+        <target><![CDATA[¡Toda la región fue contaminada por la <strong>explosión del {plan}</strong>!]]></target>
       </segment>
     </unit>
     <unit id="sXukPwK" name="Immerhin wurden alle Bürger aus der Stadt geschleudert...">
@@ -22734,7 +22734,7 @@
       </notes>
       <segment>
         <source>Immerhin wurden alle Bürger aus der Stadt geschleudert...</source>
-        <target>Immerhin wurden alle Bürger aus der Stadt geschleudert...</target>
+        <target>Después de todo, todos los ciudadanos fueron expulsados ​​de la ciudad...</target>
       </segment>
     </unit>
     <unit id="OXoMte5" name="Du kannst nicht &lt;strong&gt;mehr als 2 Rationen Wasser pro Tag&lt;/strong&gt; entnehmen.">
@@ -22775,7 +22775,7 @@
       </notes>
       <segment>
         <source>Wenn die Stadt eine Pumpe baut, ist sie im Stande mehr Wasser zu fördern!</source>
-        <target>Wenn die Stadt eine Pumpe baut, ist sie im Stande mehr Wasser zu fördern!</target>
+        <target>Si la ciudad construye una bomba, ¡podrá bombear más agua!</target>
       </segment>
     </unit>
     <unit id="AyyQPWF">
@@ -22786,7 +22786,7 @@
       </notes>
       <segment>
         <source>Du kannst den Bau einer Pumpe im Bereich &lt;strong&gt;Konstruktionen&lt;/strong&gt; beginnen.</source>
-        <target><![CDATA[Du kannst den Bau einer Pumpe im Bereich <strong>Konstruktionen</strong> beginnen.]]></target>
+        <target><![CDATA[Puede comenzar a construir una bomba en el área <strong>Construcciones</strong>.]]></target>
       </segment>
     </unit>
     <unit id="mJl9hp7" name="{points} Punkt(e)">
@@ -22807,7 +22807,7 @@
       </notes>
       <segment>
         <source>Schließen</source>
-        <target>Schließen</target>
+        <target>Cerrar</target>
       </segment>
     </unit>
     <unit id="olizD4j" name="Global">
@@ -22829,7 +22829,7 @@
       </notes>
       <segment>
         <source>Mehrere Brandherde wurden im Reaktorkern gesichtet, bevor er komplett in Flammen aufging. Kurz danach wurde das gesamte Gebiet von einem grünen Blitz vollkommen verwüstet. Die wenigen Überlebenden sind innerhalb nur weniger Sekunden an Strahlenkrankheit gestorben. Was für ein Ende!</source>
-        <target>Mehrere Brandherde wurden im Reaktorkern gesichtet, bevor er komplett in Flammen aufging. Kurz danach wurde das gesamte Gebiet von einem grünen Blitz vollkommen verwüstet. Die wenigen Überlebenden sind innerhalb nur weniger Sekunden an Strahlenkrankheit gestorben. Was für ein Ende!</target>
+        <target>Se detectaron varias fuentes de fuego en el núcleo del reactor antes de que se incendiara por completo. Poco después, toda el área fue completamente devastada por un rayo verde. Los pocos supervivientes murieron de enfermedad por radiación en cuestión de segundos. ¡Qué final!</target>
       </segment>
     </unit>
   </file>
